fix: align plant in a row view

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,30 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+/* Solution */
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.plants-container {
+  display: flex;
+  flex-direction: row;
+  gap: 52px;
+}
+
+.plant {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  width: 200px;
+}
+
+.text {
+  text-align: center;
+}
